<resources>
    <string name="app_name">Trampas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_menu_principal">Trampas</string>


    <string name="seleccionar_fecha_inicio">Seleccione una fecha de inicio.</string>
    <string name="dispositivos_vinculados">Dispositivos vinculados</string>
    <string name="escanear">Escanear</string>
    <string name="mensaje_agregar_trampa">Seleccione un dispositivo para obtener la información necesaria y luego presione el botón de agregar.</string>
    <string name="estado">Estado:</string>
    <string name="desconectado">Desconectado.</string>
    <string name="obteniendo_datos">Obteniendo datos…</string>
    <string name="nombre">Nombre</string>
    <string name="agregar">Agregar</string>
    <string name="temperatura">Temperatura</string>
    <string name="humedad">Humedad</string>
    <string name="id">Id:</string>
    <string name="mac">Mac:</string>
    <string name="colocaciones">Colocaciones</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="correo">Correo</string>
    <string name="contrasenia">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ver_existentes">Ver existentes</string>
    <string name="ver_colocadas">Ver colocadas</string>
    <string name="colocar">Colocar</string>
    <string name="extraer">Extraer</string>
    <string name="apellido">Apellido</string>
    <string name="nivel_de_privilegio">Nivel de privilegio</string>
    <string name="usuario">Usuario</string>
    <string name="solicitud_de_administrador">Solicitud de administrador</string>
    <string name="no_hay_usuarios">No hay usuarios.</string>
    <string name="mensaje_colocar_trampa">Mantenga presionando sobre una trampa para colocarla en su ubicación actual.</string>
    <string name="trampas_vinculadas">Trampas vinculadas</string>
    <string name="mensaje_extraer_trampa">Seleccione una trampa para obtener sus datos y luego presione el botón de extraer.</string>
    <string name="desde">Desde:</string>
    <string name="vacio">---</string>
    <string name="hasta">Hasta:</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="no_hay_trampas">No hay trampas.</string>
    <string name="imagen_del_usuario">Imagen del usuario</string>
    <string name="detalles">Detalles:</string>
    <string name="fecha_de_inicio">Fecha de inicio:</string>
    <string name="fecha_de_fin">Fecha de Fin:</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="temperatura_minima">Temperatura mínima:</string>
    <string name="c">°C</string>
    <string name="temperatura_maxima">Temperatura máxima:</string>
    <string name="promedio_de_temperatura">Promedio de temperatura:</string>
    <string name="humedad_minima">Humedad mínima:</string>
    <string name="porcentaje">%</string>
    <string name="humedad_maxima">Humedad máxima:</string>
    <string name="promedio_de_humedad">Promedio de humedad:</string>
    <string name="leishmaniasis_detectada">Leishmaniasis detectada</string>
    <string name="actualizando_datos">Actualizando datos…</string>
    <string name="editar">Editar</string>
    <string name="jamas_colocada_anteriormente">Jamás colocada anteriormente</string>
    <string name="resumen">Resumen:</string>
    <string name="inicio">Inicio:</string>
    <string name="fin">Fin:</string>
    <string name="mas_informacion">Más información</string>
    <string name="search">Search</string>
    <string name="detalles_de_colocacion">Detalles de colocación:</string>
    <string name="bluetooth_encendido">Bluetooth encendido.</string>
    <string name="bluetooth_apagado">Bluetooth apagado.</string>
    <string name="trampas_encontradas">Trampas encontradas</string>
    <string name="escaneando">Escaneando…</string>
    <string name="escaneo_detenido">Escaneo detenido.</string>
    <string name="bluetooth_no_encontrado">Bluetooth no encontrado.</string>
    <string name="conexion_fallo">La conexión falló, reintente.</string>
    <string name="datos_recibidos">Desconectado, datos recibidos.</string>
    <string name="conectando">Conectando…</string>
    <string name="conectado">Conectado al dispositivo: </string>
    <string name="error_interno_servidor">Error interno del servidor, Reintente.</string>
    <string name="error_conexion_servidor">No hay conexión con el servidor.</string>
    <string name="almacenando_datos">Almacenando datos…</string>
    <string name="opcion_menu">opcion_seleccionada</string>
    <string name="mensaje_salir">Presione nuevamente para salir.</string>
    <string name="mensaje_editar_ubicacion">Arrastre para editar ubicación</string>
    <string name="campo_requerido">Campo requerido</string>
    <string name="correo_invalido">Correo inválido</string>
    <string name="registro_admin_titulo">Privilegio administrador</string>
    <string name="registro_admin_mensaje">Se requiere una validación para esta opción, mientras permanecerá con privilegios de usuario normal.</string>
    <string name="registro_admin_boton">Entendido</string>
    <string name="cambiando_privilegio">Cambiando…</string>
    <string name="datos_incorrectos">Datos incorrectos, verifique.</string>
    <string name="trampas">Trampas</string>
    <string name="usuarios">Usuarios</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="administrar">Administrar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="datos_recibidos_titulo">Datos recibidos.</string>
    <string name="obteniendo_ubicacion">Obteniendo ubicación…</string>
    <string name="actualmente_colocada">Actualmente colocada</string>
    <string name="cambiar_contrasenia">Cambiar contraseña</string>
    <string name="contrasenia_nueva">Contraseña nueva</string>
    <string name="desarrollado">Desarrollado por</string>
    <string name="desarrollado1">Aplicación desarrollada por el alumno</string>
    <string name="desarrollado2">Alejandro Peculio</string>
    <string name="desarrollado3">pasantía laboral de la carrera</string>
    <string name="exportar">Exportar</string>
    <string name="mensaje_exportar_datos">Seleccione las fechas entre las que desea realizar la exportación, si las deja en blanco se exportarán todos los datos del sistema.\n Los datos en formato CSV serán enviados a su correo.</string>
    <string name="seleccionar_fecha_fin">Seleccione una fecha de fin.</string>
    <string name="perros_existentes">Perros existentes en el área:</string>
    <string name="no_hay_colocaciones_con_leishmaniasis">No hay colocaciones con leishmaniasis.</string>
    <string name="no_hay_trampas_para_colocar">No hay trampas para colocar.</string>
    <string name="no_hay_usuarios_solicitantes">No hay usuarios solicitantes.</string>
    <string name="dispositivos_encontrados">Dispositivos encontrados</string>
    <string name="debe_de_seleccionar_un_dispositivo_para_agregar">Debe de seleccionar un dispositivo para agregar.</string>
    <string name="no_hay_trampas_con_leishmaniasis">No hay trampas con Leishmaniasis.</string>
    <string name="observaciones">Observaciones:</string>
    <string name="habitantes_de_la_vivienda">Habitantes de la vivienda:</string>
    <string name="flebotomos_capturados">Flebótomos capturados:</string>
    <string name="perros_muestreados">Perros muestreados:</string>
    <string name="procedencia_de_perros_positivos">Procedencia de perros positivos:</string>
    <string name="otras_acciones_implementadas">Otras acciones implementadas:</string>
    <string name="perros_eutanasiados">Perros eutanasiados:</string>
    <string name="perros_positivos">Perros positivos:</string>
    <string name="informacion_ultima_vez">Información última vez:</string>
    <string name="no_colocada_actualmente">No colocada actualmente</string>
    <string name="informacion">Información:</string>
    <string name="agregando_trampa">Agregando trampa…</string>
</resources>
