<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/trampas">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_mostrar_exitentes"
                    android:icon="@drawable/ic_lista"
                    android:title="@string/ver_existentes" />
                <item
                    android:id="@+id/nav_mostrar_colocadas"
                    android:icon="@drawable/ic_mapa"
                    android:title="@string/ver_colocadas" />
                <item
                    android:id="@+id/nav_colocar"
                    android:icon="@drawable/ic_colorar_trampa"
                    android:title="@string/colocar" />
                <item
                    android:id="@+id/nav_extraer"
                    android:icon="@drawable/ic_extraer_trampa"
                    android:title="@string/extraer" />
            </group>
        </menu>
    </item>

    <item android:title="@string/usuarios">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_perfil"
                    android:icon="@drawable/ic_perfil"
                    android:title="@string/mi_perfil" />
                <item
                    android:id="@+id/nav_administrar_usuarios"
                    android:icon="@drawable/ic_administrar"
                    android:title="@string/administrar" />
            </group>
        </menu>
    </item>


    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_cerrar_sesion"
            android:title="@string/cerrar_sesion" />
    </group>
</menu>

