<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="@dimen/padding_fondo"
    tools:context=".Registro">


    <android.support.v7.widget.CardView
        cardPreventCornerOverlap="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/cardview_dark_background"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="@dimen/cardview_default_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/etNombreError"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/nombre"
                android:textColorHint="@color/colorBlanco"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorBlanco"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etApellidoError"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/apellido"
                android:textColorHint="@color/colorBlanco"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/etApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorBlanco" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etCorreoError"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/correo"
                android:textColorHint="@color/colorBlanco"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/etCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlanco" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etContraseniaError"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/contrasenia"
                android:textColorHint="@color/colorBlanco"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etContrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlanco" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nivel_de_privilegio"
                        android:textColor="@color/colorBlanco"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvNivelPrivilegio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/usuario"
                        android:textColor="#CCC" />
                </LinearLayout>

                <Switch
                    android:id="@+id/swNivelPrivilegio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/fondo_claro"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/cardview_dark_background"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnRegistrarse"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/fondo_claro"
                        android:padding="10dp"
                        android:text="@string/registrarse" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>