<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="3"
    tools:context=".AgregarTrampa">

    <LinearLayout
        android:id="@+id/llBotones"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/fondo_oscuro">

            <Button
                android:id="@+id/btnConectarBT"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_bluetooth" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnDispositivosVinculados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo_oscuro"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/dispositivos_vinculados"
                android:textColor="@color/colorBlanco" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:gravity="right">

            <Button
                android:id="@+id/btnEscanear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_oscuro"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/escanear"
                android:textColor="@color/colorBlanco" />
        </LinearLayout>
    </LinearLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="@dimen/cardview_default_radius"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/cvEstado"
        app:layout_constraintTop_toBottomOf="@+id/llBotones">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTituloLista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dispositivos_vinculados"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mensaje_agregar_trampa"
                android:textAlignment="center"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/llProgressBarLista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:indeterminate="true"
                    android:indeterminateTint="#000" />
            </LinearLayout>

            <ListView
                android:id="@+id/listaDispositivos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="@dimen/cardview_default_radius"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toTopOf="@id/cvNombre">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:text="@string/estado" />

            <TextView
                android:id="@+id/tvEstado"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/desconectado" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvNombre"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="@dimen/cardview_default_radius"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llProgressBarDatos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ProgressBar
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/colorBlanco" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/obteniendo_datos"
                        android:textColor="@color/colorBlanco" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etNombreError"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:hint="@string/nombre"
                    android:textColorHint="@color/colorBlanco"
                    app:errorEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/etNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/colorBlanco"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="2dp">

                <Button
                    android:id="@+id/btnAgregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/fondo_claro"
                    android:text="@string/agregar" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>